--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "flowbite-react patch"
   },
   "dependencies": {
+    "animejs": "^4.0.1",
     "emailjs-com": "^3.2.0",
     "flowbite-react": "^0.11.7",
     "react": "^19.0.0",
