--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "flowbite-react patch"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.42",
     "animejs": "^4.0.1",
     "emailjs-com": "^3.2.0",
     "flowbite-react": "^0.11.7",
