--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "animejs": "^4.0.1",
     "emailjs-com": "^3.2.0",
     "flowbite-react": "^0.11.7",
+    "framer-motion": "^12.7.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.5.0"
   },
   "devDependencies": {
