--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@studio-freight/lenis": "^1.0.42",
     "animejs": "^4.0.1",
+    "aos": "^2.3.4",
     "emailjs-com": "^3.2.0",
     "flowbite-react": "^0.11.7",
     "framer-motion": "^12.7.4",
