--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.16.0",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-router-dom": "^7.5.0"
   },
   "devDependencies": {
